# ARC-GEN

./: pyproject.toml
arc_gen/: __init__.py  arc_gen_variations.py  common.py  task_list.py
arc_gen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tasks/: __init__.py
tasks/training/: __init__.py
